[add] ajuste de mensaje  en lista comprobante  y Swal ajuste de importacion en prestaciones form

--- a/src/app/modulos/gastos-viaje/comprobaciones/lista-comprobantes/lista-comprobantes.component.html
+++ b/src/app/modulos/gastos-viaje/comprobaciones/lista-comprobantes/lista-comprobantes.component.html
@@ -58,7 +58,7 @@
         </table>
         <div class="row">
           <div class="alert alert-warning" role="alert">
-            Los totales son informativos y se muestran en MXN, pero la contabilización en SAP es en la moneda
+            Los totales son informativos y se muestran en MXN, pero la contabilización en ORACLE es en la moneda
             correspondiente.
           </div>
         </div>
