[add] ajustes de errores  por Ramirez

--- a/src/app/modulos/comprobaciones-gastos/gastos_viajes/gastos-viajes-list/gastos-viajes-list.component.html
+++ b/src/app/modulos/comprobaciones-gastos/gastos_viajes/gastos-viajes-list/gastos-viajes-list.component.html
@@ -2,8 +2,10 @@
 <div class="row">
   <div class="col-md-2">
     <a id="agregarSolicitudAnticipo" *ngIf="globals.menuDinamico.comprobacion_Gastos_Viaje_Add "
-      routerLink="/home/gastos_viaje/comprobacion/add" class="btn btn-primary mb-2">
-      Comprobar</a>
+      routerLink="/home/comprobaciones/gastos_viaje/add" class="btn btn-primary mb-2">
+      <!-- routerLink="/home/gastos_viaje/comprobacion/add" -->
+      Comprobar
+    </a>
   </div>
 </div>
 
