[add] ajuste de lisa nota de credito  bandeja de aprobacion

--- a/src/app/modulos/notas-credito/list-notas-credito-rci/list-notas-credito-rci.component.html
+++ b/src/app/modulos/notas-credito/list-notas-credito-rci/list-notas-credito-rci.component.html
@@ -24,7 +24,7 @@
               <th scope="" class="align-middle">Detalles</th>
               <th scope="" *ngIf="usuario.acreedor"> Cargar NC </th>
               <th scope="" *ngIf="usuario.aprobador"> Documentos </th>
-              <th scope="" *ngIf="usuario.aprobador === 2"> Editar Nota de Crédito </th>
+              <th scope="" *ngIf="usuario.aprobador"> Editar Nota de Crédito </th>
               <th scope="" *ngIf="usuario.aprobador"> Aprobación </th>
               <!--  <th scope=""> Validación </th> -->
             </tr>
