--- a/src/app/modulos/notas-credito/list-notas-credito-rci/list-notas-credito-rci.component.html
+++ b/src/app/modulos/notas-credito/list-notas-credito-rci/list-notas-credito-rci.component.html
@@ -14,13 +14,14 @@
               <th scope="" class="align-middle">Sucursal</th>
               <th scope="" class="align-middle">Usuario Acreedor</th>
               <th scope="" class="align-middle text-center">Estatus Aprobación </th>
+              <th scope="" class="align-middle">Razón Social Emisor</th>
               <th scope="" class="align-middle">Estatus Oracle</th>
               <th scope="" class="align-middle">Fecha Contabilización</th>
               <th scope="" class="align-middle">Fecha Creación</th>
               <th scope="" class="align-middle">Fecha Emisor</th>
               <th scope="" class="align-middle">Fecha Recepción</th>
               <!-- <th scope="" class="align-middle">Folio SAP</th> -->
-              <th scope="" class="align-middle">Tipo de Gasto</th>
+              <!-- <th scope="" class="align-middle">Tipo de Gasto</th> -->
               <th scope="" class="align-middle">Detalles</th>
               <th scope="" *ngIf="usuario.acreedor"> Cargar NC </th>
               <th scope="" *ngIf="usuario.aprobador"> Documentos </th>
@@ -44,13 +45,14 @@
                   </span>
                 </div>
               </td>
+              <td> {{ item.nombre_proveedor }} </td>
               <td> {{ item.estatus_sap_descripcion }} </td>
               <td> {{ item.fecha_contabilizacion | date:'yyyy-MM-dd' }} </td>
               <td> {{ item.fecha_creacion | date:'yyyy-MM-dd' }} </td>
               <td> {{ item.fecha_emision | date:'yyyy-MM-dd' }} </td>
               <td> {{ item.fecha_recepcion | date:'yyyy-MM-dd' }} </td>
               <!-- <td> {{ item.folio_sap }} </td> -->
-              <td> {{ item.tipo_gasto }} </td>
+              <!-- <td> {{ item.tipo_gasto }} </td> -->
               <td class="align-middle">
                 <button class="btn btn-primary" (click)="verDetalles($event.target, item.id , item.documento_id)"> Ver
                 </button>
