--- a/src/app/modulos/carga-documentos/detalle-oc-mx/detalle-oc-mx.component.html
+++ b/src/app/modulos/carga-documentos/detalle-oc-mx/detalle-oc-mx.component.html
@@ -20,7 +20,7 @@
       <!-- <div class="col-lg-6 col-xl-4 mt-1">
         <strong>MONTO ANTICIPO: {{ orden_oc.importe_anticipo |  currency:'$' }} {{ orden_oc.moneda }} </strong>
       </div> -->
-      <div *ngIf="!usuario.proveedor" class="col-lg-6 col-xl-4 mt-1">
+      <!-- <div *ngIf="!usuario.proveedor" class="col-lg-6 col-xl-4 mt-1">
         <strong>MÉTODO DE PAGO: {{ orden_oc.metodo_pago }} </strong>
       </div>
       <div *ngIf="!usuario.proveedor" class="col-lg-6 col-xl-4 mt-1">
@@ -28,7 +28,7 @@
       </div>
       <div *ngIf="!usuario.proveedor" class="col-lg-6 col-xl-4 mt-1">
         <strong>USO DE CFDI: {{ orden_oc.uso_cfdi }} </strong>
-      </div>
+      </div> -->
       <div class="col-lg-6 col-xl-4 mt-1">
         <strong>TIPO DE CAMBIO: {{ orden_oc.tipo_cambio }} </strong>
       </div>
