--- a/src/app/modulos/listar-cfdi/filtros-cfdi/filtros-cfdi.component.html
+++ b/src/app/modulos/listar-cfdi/filtros-cfdi/filtros-cfdi.component.html
@@ -99,13 +99,9 @@
           </div>
           <div class="col-md-3 col-lg-3">
             <label class="label-control" for="Serie">Nivel de aprobación</label>
-            <select #select_nivel_aprobacion class="form-control" style="display:block"
-              (change)="selectNivelAprobacion(select_nivel_aprobacion.value)">
-              <option value=" 0 "> Seleccione un Nivel</option>
-              <option value=" 1 "> Validador Compras </option>
-              <option value=" 2 "> Validador CXP </option>
-              <option value=" 3 "> Validador Supervisor </option>
-            </select>
+            <select2 [data]="list_nivel_aprobacion" (valueChanged)="selectNivelAprobacion($event)" name="niv_apr"
+              id="niv_apr">
+            </select2>
           </div>
           <div class="col-md-3 col-lg-3">
             <label class="label-control" for="fecha_ini_rec">Fecha Recepción Inicio</label>
