[add] label de aviso de privacidad

--- a/src/app/paginas/dynamic-login/dynamic-login/dynamic-login.component.html
+++ b/src/app/paginas/dynamic-login/dynamic-login/dynamic-login.component.html
@@ -83,6 +83,10 @@
             <p class="text-center  text-grey-darker">
               {{ anio }}® Next Technologies.
             </p>
+            <hr />
+            <p *ngIf="bandera_proveedor" class="text-center text-grey-darker">
+              Aviso de Privacidad <a href="">RCI</a>, <a href="">HD</a>
+            </p>
           </form>
         </div>
         <!-- end login-content -->
