--- a/src/app/compartidos/comprobacion-components/tabla-conceptos-form/tabla-conceptos-form.component.html
+++ b/src/app/compartidos/comprobacion-components/tabla-conceptos-form/tabla-conceptos-form.component.html
@@ -14,7 +14,7 @@
           <th scope="col">Impuestos</th>
           <th scope="col">Anexos</th>
           <th scope="col">Adicional</th>
-          <th scope="col">No Aplica</th>
+          <th scope="col">Aplica</th>
         </tr>
       </thead>
       <tbody formArrayName="conceptos">
@@ -40,7 +40,7 @@
             </select2>
           </th>
           <th class="text-right" scope="">
-            <input currencyMask formControlName="montoRembolsar" type="text" name="linea_detalle" maxlength="250"
+            <input currencyMask formControlName="monto_rembolsar" type="text" name="linea_detalle" maxlength="250"
               class="form-control">
           </th>
           <th class="text-center" scope=""> <button class="btn btn-primary"> <em class="fa fa-percent"></em> </button>
