--- a/src/app/compartidos/comprobacion-components/row-concepto-extranjero/row-concepto-extranjero.component.html
+++ b/src/app/compartidos/comprobacion-components/row-concepto-extranjero/row-concepto-extranjero.component.html
@@ -1,10 +1,10 @@
-<form [formGroup]="formulario_row" *ngIf="!concepto">
+<form [formGroup]="formulario_row" *ngIf="!concepto" autocomplete="off">
   <div class="table-responsive">
     <table class="table">
       <caption></caption>
       <thead>
         <tr>
-          <th scope="col">Descripcion</th>
+          <th scope="col">Descripción</th>
           <th scope="col">Unidad</th>
           <th scope="col">Valor Unitario</th>
           <th scope="col">Cantidad</th>
@@ -14,7 +14,7 @@
           <th scope="col">Impuestos</th>
           <th scope="col">Anexos</th>
           <th scope="col">Adicional</th>
-          <th scope="col">No Aplica</th>
+          <th scope="col">Aplica</th>
         </tr>
       </thead>
       <tbody>
@@ -44,8 +44,9 @@
             </select2>
           </th>
           <th class="text-right" scope="">
-            <input currencyMask [options]="{ thousands: ',', decimal: '.' }" formControlName="montoRembolsar"
-              type="text" name="linea_detalle" maxlength="250" class="form-control">
+            <input currencyMask [options]="{ thousands: ',', decimal: '.' }" formControlName="monto_rembolsar"
+              type="text" name="linea_detalle" maxlength="250" class="form-control"
+              (keyup)="cambiarEstatusTotalModificado()">
           </th>
           <th class="text-center" scope=""> <button class="btn btn-primary"> <em class="fa fa-percent"></em> </button>
           </th>
